# rdwm2

./: .gitignore  Makefile  config.mk  drw.c  drw.h  dwm.c
rxl/: Cargo.toml
rxl/src/: drw.rs  lib.rs
