[package]
name = "rxl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "2.19.1", features = ["xlib", "xft", "xinerama"] }
libc = "0.2.126"
yeslogic-fontconfig-sys = "3.2.0"